# ChristianPayne

./: .gitignore  Cargo.toml  README.md  Trunk.toml  docs.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js
functions/hello-world/: hello-world.js
src/: App.svelte  app.css  app.rs  breakpoints.scss  global.css  global.scss  main.rs  main.ts  types.d.ts
src/components/: About.svelte  Banner.svelte  Button.svelte  Capabilities.svelte  Card.svelte  Contact.svelte  GitHubRepos.svelte  Project.svelte  Projects.svelte  Quote.svelte  case_studies.rs  ennesults.rs  ennesults_case_study.rs  home.rs  landing.rs  mod.rs  obs_scheduled_recordings_case_study.rs  permission_system_case_study.rs  website_case_study.rs
src/pages/: forms.svelte  home.svelte  main.svelte
src/styles/: tailwind.css
