[package]
name = "ChristianPayne"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.8", features = ["csr"] }
leptos_router = "0.7.8"
thaw = { version = "0.4.7", features = ["csr"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
dotenv = "0.15.0"